fix menu translating issue and add text overflow

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -208,5 +208,9 @@ right: 10px;
   height: 100%;
   width: 300px;
   background: #ddd;
-
+      transform: translateX(300px);
+        transition: transform 0.5s;
+  &.shownavi {
+    transform: translateX(0px);
+  }
 }
